--- a/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
+++ b/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
@@ -111,9 +111,11 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="MoveUnit.cs" />
+    <Compile Include="Portal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Tower.cs" />
     <Compile Include="Unit.cs" />
   </ItemGroup>
   <ItemGroup>
