--- a/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
+++ b/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
@@ -107,10 +107,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arrow.cs" />
+    <Compile Include="Weapon.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="MoveUnit.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Portal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
