--- a/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
+++ b/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Map.cs" />
     <Compile Include="Weapon.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Enemy.cs" />
