немного меню + интерфейс

--- a/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
+++ b/Саша/ООП/TowerDefence/TowerDefence/TowerDefence/TowerDefence.csproj
@@ -107,7 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface.cs" />
+    <Compile Include="GameInterface.cs" />
     <Compile Include="InterfaceElement.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="MoneyInterfaceElement.cs" />
@@ -160,6 +160,9 @@
       <ProductName>Microsoft XNA Framework Redistributable 4.0</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
